feat: add CardanoClient and minting script

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,9 @@
 NETWORK_ID=testnet
-BLOCKFROST_PROJECT_ID=
-WALLET_ADDRESS=
+
+BLOCKFROST_PROJECT_ID_TESTNET=
+BLOCKFROST_PROJECT_ID_MAINNET=
+BLOCKFROST_PROJECT_ID_IPFS=
+
+PAYMENT_ADDR_TESTNET=
+PAYMENT_ADDR_MAINNET=
+PAYMENT_SKEY=
