--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,18 @@
 .env
 
 .vscode/
+.docker/
+.mypy_cache/
 __pycache__/
+data/
 
+protocol.json
 *.skey
 *.vkey
+*.addr
+*.raw
 *.draft
-utxo.json
-protocol.json
+*.final
+*.signed
+*.script
+distribute.*
